# text-mining-agent

./: .env.example  .gitignore  README.md  docker-compose.local-llm.yml  docker-compose.prod.yml  docker-compose.yml  setup.bat  start-docker.bat  start-local-llm.bat  start.bat  stop.bat
.github/workflows/: ci.yml  deploy.yml  rollback.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_table.py
backend/app/: main.py
backend/app/agents/: agent_store.py  analysis_agent.py
backend/app/api/: router.py
backend/app/api/endpoints/: agent.py  analysis.py  auth.py  dashboard.py  data.py  health.py  reports.py
backend/app/core/: cloud_provider.py  config.py  database.py  errors.py  exception_handlers.py  logging.py  security.py  telemetry.py  validation.py
backend/app/middleware/: correlation.py  rate_limit.py  security_headers.py
backend/app/models/: orm.py  schemas.py
backend/app/services/: analysis_registry.py  cache.py  clustering.py  cooccurrence.py  data_import.py  dlq.py  llm_orchestrator.py  pii_anonymizer.py  pipeline.py  report_generator.py  sentiment.py  text_preprocessing.py
backend/app/services/llm_providers/: __init__.py  azure_provider.py  base.py  bedrock_provider.py  direct_provider.py  errors.py  gemini_provider.py  local_provider.py  model_registry.py  vertex_provider.py
backend/app/services/tools/: __init__.py  actionability.py  causal_chain.py  cluster_tool.py  contradiction.py  cooccurrence_tool.py  sentiment_tool.py  taxonomy.py
backend/tests/: conftest.py  test_agent_tool_use.py  test_analysis_endpoints.py  test_analysis_persistence.py  test_api.py  test_auth.py  test_cache.py  test_dashboard.py  test_data_pagination.py  test_dlq.py  test_errors.py  test_existing_tool_wrappers.py  test_health_extended.py  test_metrics.py  test_middleware.py  test_model_registry.py  test_new_analysis_tools.py  test_pii.py  test_pipeline.py  test_preprocessing.py  test_providers.py  test_rbac.py  test_report_generator.py  test_schemas.py  test_security.py  test_security_headers.py  test_tool_registry.py  test_validation.py
demo/data/: customer_feedback.csv  employee_survey.csv  support_tickets.csv
docs/: analysis_methods_guide.md  demo_scenario.md  setup_guide.md  specification.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalysisProgress.tsx  AttributeFilter.tsx  AuthGuard.tsx  DatasetGuard.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  ToastContainer.tsx
frontend/src/hooks/: useThemeColors.ts
frontend/src/pages/: ActionabilityPage.tsx  (+13 more)
infra/terraform/: tfvars.example
(+38 files in other folders)
